# skif-solo-examples

./: .gitignore  .gitmodules  readme.md
games/: .gitignore  CMakeLists.txt
games/stubgame/: CMakeLists.txt  stubgame.cpp
scripts/: generate_vc2022_console_debug.cmd
